# binance-portfolio-tracker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  docker-publish.yml  pylint.yml
app/: dashboard.py  database.py  functions.py  secret.cfg-example  utils.py
app/assets/: base.css  base2.css  styles.css
app/assets/PortfolioTrackerLogos/: logo_info.txt
app/pages/: spot.py
